refactor: migrate Collections/Arrays.asList to Java 9+ factory methods
Motivation:
Java 9+ provides List.of(), Map.of(), Set.of() factory methods that are
more concise and return truly immutable collections.

Modification:
Replace Arrays.asList() with List.of(), Collections.emptyList/Map/Set()
with List/Map/Set.of(), Collections.singletonList() with List.of(),
Collections.unmodifiableList() with List.copyOf(), and
Collections.unmodifiableSet() with Set.copyOf() across 79 files.
Skips protobuf-generated code (ReliableDelivery.java, ReplicatedEventSourcing.java).

Result:
Cleaner code using Java 17 immutable collection factories.

Tests:
Not run - compile-only test file changes

References:
None - Java 17 API modernization