@@ -16,7 +16,7 @@ package org.apache.pekko.actor.testkit.typed.javadsl;
 import static org.junit.jupiter.api.Assertions.assertFalse;
 import static org.junit.jupiter.api.Assertions.assertTrue;
 
-import java.util.Collections;
+import java.util.Map;
 import java.util.Optional;
 import org.apache.pekko.actor.testkit.typed.LoggingEvent;
 import org.apache.pekko.actor.testkit.typed.TestException;
@@ -39,7 +39,7 @@ public class LoggingTestKitTest {
         System.currentTimeMillis(),
         Optional.empty(),
         Optional.empty(),
-        Collections.emptyMap());
+        Map.of());
   }
 
   private LoggingEvent errorWithCause(Throwable cause) {
@@ -51,7 +51,7 @@ public class LoggingTestKitTest {
         System.currentTimeMillis(),
         Optional.empty(),
         Optional.of(cause),
-        Collections.emptyMap());
+        Map.of());
   }
 
   @Test
