@@ -13,7 +13,6 @@
 
 package org.apache.pekko.event;
 
-import java.util.Collections;
 import java.util.LinkedHashMap;
 import java.util.Map;
 import org.apache.pekko.actor.AbstractActor;
@@ -30,7 +29,7 @@ public class ActorWithMDC extends AbstractActor {
   private void receiveLog(Log log) {
     Map<String, Object> mdc;
     if (log.message.startsWith("No MDC")) {
-      mdc = Collections.emptyMap();
+      mdc = Map.of();
     } else if (log.message.equals("Null MDC")) {
       mdc = null;
     } else {
