@@ -13,7 +13,6 @@
 
 package org.apache.pekko.cluster;
 
-import java.util.Collections;
 import java.util.List;
 import org.apache.pekko.actor.ActorSystem;
 import org.apache.pekko.actor.Address;
@@ -26,7 +25,7 @@ public class ClusterJavaCompileTest {
   final Cluster cluster = null;
 
   public void compileJoinSeedNodesInJava() {
-    final List<Address> addresses = Collections.singletonList(new Address("pekko", "MySystem"));
+    final List<Address> addresses = List.of(new Address("pekko", "MySystem"));
     cluster.joinSeedNodes(addresses);
   }
 }
