@@ -26,7 +26,6 @@ import com.typesafe.config.ConfigFactory;
 
 import java.io.Serializable;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 import java.time.Duration;
@@ -186,7 +185,7 @@ public class RouterDocTest extends AbstractJavaTest {
   public static class Parent extends AbstractActor {
 
     // #paths
-    List<String> paths = Arrays.asList("/user/workers/w1", "/user/workers/w2", "/user/workers/w3");
+    List<String> paths = List.of("/user/workers/w1", "/user/workers/w2", "/user/workers/w3");
     // #paths
 
     // #round-robin-pool-1
