@@ -14,7 +14,7 @@
 package jdocs.stream.operators.flow;
 
 import java.time.Duration;
-import java.util.Collections;
+import java.util.List;
 import java.util.Optional;
 import java.util.concurrent.CompletionStage;
 import org.apache.pekko.NotUsed;
@@ -46,7 +46,7 @@ public class FromSinkAndSource {
                 "127.0.0.1", // interface
                 9999, // port
                 100, // backlog
-                Collections.emptyList(), // socket options
+                List.of(), // socket options
                 true, // Important: half close enabled
                 Optional.empty() // idle timeout
                 );
