@@ -27,7 +27,7 @@ public class StatefulMapConcat {
   static void zipWithIndex() {
     // #zip-with-index
     Source<Pair<String, Long>, NotUsed> letterAndIndex =
-        Source.from(Arrays.asList("a", "b", "c", "d"))
+        Source.from(List.of("a", "b", "c", "d"))
             .statefulMapConcat(
                 () -> {
                   // variables we close over with lambdas must be final, so we use a container,
@@ -39,7 +39,7 @@ public class StatefulMapConcat {
                     final Pair<String, Long> zipped = new Pair<>(element, index[0]);
                     index[0] += 1;
                     // we return an iterable with the single element
-                    return Collections.singletonList(zipped);
+                    return List.of(zipped);
                   };
                 });
 
@@ -56,7 +56,7 @@ public class StatefulMapConcat {
     // #denylist
     Source<String, NotUsed> fruitsAndDenyCommands =
         Source.from(
-            Arrays.asList("banana", "pear", "orange", "deny:banana", "banana", "pear", "banana"));
+            List.of("banana", "pear", "orange", "deny:banana", "banana", "pear", "banana"));
 
     Flow<String, String, NotUsed> denyFilterFlow =
         Flow.of(String.class)
@@ -67,13 +67,13 @@ public class StatefulMapConcat {
                   return (element) -> {
                     if (element.startsWith("deny:")) {
                       denyList.add(element.substring("deny:".length()));
-                      return Collections
-                          .emptyList(); // no element downstream when adding a deny listed keyword
+                      return List
+                          .of(); // no element downstream when adding a deny listed keyword
                     } else if (denyList.contains(element)) {
-                      return Collections
-                          .emptyList(); // no element downstream if element is deny listed
+                      return List
+                          .of(); // no element downstream if element is deny listed
                     } else {
-                      return Collections.singletonList(element);
+                      return List.of(element);
                     }
                   };
                 });
@@ -90,7 +90,7 @@ public class StatefulMapConcat {
   static void reactOnEnd() {
     // #bs-last
     Source<String, NotUsed> words =
-        Source.from(Arrays.asList("baboon", "crocodile", "bat", "flamingo", "hedgehog", "beaver"));
+        Source.from(List.of("baboon", "crocodile", "bat", "flamingo", "hedgehog", "beaver"));
 
     Flow<String, String, NotUsed> bWordsLast =
         Flow.of(String.class)
@@ -103,13 +103,13 @@ public class StatefulMapConcat {
                     if (element.startsWith("b")) {
                       // add to stash and emit no element
                       stashedBWords.add(element);
-                      return Collections.emptyList();
+                      return List.of();
                     } else if (element.equals("-end-")) {
                       // return in the stashed words in the order they got stashed
                       return stashedBWords;
                     } else {
                       // emit the element as is
-                      return Collections.singletonList(element);
+                      return List.of(element);
                     }
                   };
                 });
