@@ -13,7 +13,6 @@
 
 package jdocs.stream.operators.source;
 
-import java.util.Arrays;
 import java.util.List;
 import org.apache.pekko.NotUsed;
 import org.apache.pekko.actor.ActorSystem;
@@ -25,12 +24,12 @@ public class Zip {
     ActorSystem system = null;
 
     // #zipN-simple
-    Source<Object, NotUsed> chars = Source.from(Arrays.asList("a", "b", "c", "e", "f"));
-    Source<Object, NotUsed> numbers = Source.from(Arrays.asList(1, 2, 3, 4, 5, 6));
+    Source<Object, NotUsed> chars = Source.from(List.of("a", "b", "c", "e", "f"));
+    Source<Object, NotUsed> numbers = Source.from(List.of(1, 2, 3, 4, 5, 6));
     Source<Object, NotUsed> colors =
-        Source.from(Arrays.asList("red", "green", "blue", "yellow", "purple"));
+        Source.from(List.of("red", "green", "blue", "yellow", "purple"));
 
-    Source.zipN(Arrays.asList(chars, numbers, colors)).runForeach(System.out::println, system);
+    Source.zipN(List.of(chars, numbers, colors)).runForeach(System.out::println, system);
     // prints:
     // [a, 1, red]
     // [b, 2, green]
@@ -45,13 +44,13 @@ public class Zip {
     ActorSystem system = null;
 
     // #zipWithN-simple
-    Source<Integer, NotUsed> numbers = Source.from(Arrays.asList(1, 2, 3, 4, 5, 6));
-    Source<Integer, NotUsed> otherNumbers = Source.from(Arrays.asList(5, 2, 1, 4, 10, 4));
-    Source<Integer, NotUsed> andSomeOtherNumbers = Source.from(Arrays.asList(3, 7, 2, 1, 1));
+    Source<Integer, NotUsed> numbers = Source.from(List.of(1, 2, 3, 4, 5, 6));
+    Source<Integer, NotUsed> otherNumbers = Source.from(List.of(5, 2, 1, 4, 10, 4));
+    Source<Integer, NotUsed> andSomeOtherNumbers = Source.from(List.of(3, 7, 2, 1, 1));
 
     Source.zipWithN(
             (List<Integer> seq) -> seq.stream().mapToInt(i -> i).max().getAsInt(),
-            Arrays.asList(numbers, otherNumbers, andSomeOtherNumbers))
+            List.of(numbers, otherNumbers, andSomeOtherNumbers))
         .runForeach(System.out::println, system);
     // prints:
     // 5
@@ -67,8 +66,8 @@ public class Zip {
     ActorSystem system = null;
     // #zipAll-simple
 
-    Source<Integer, NotUsed> numbers = Source.from(Arrays.asList(1, 2, 3, 4));
-    Source<String, NotUsed> letters = Source.from(Arrays.asList("a", "b", "c"));
+    Source<Integer, NotUsed> numbers = Source.from(List.of(1, 2, 3, 4));
+    Source<String, NotUsed> letters = Source.from(List.of("a", "b", "c"));
 
     numbers.zipAll(letters, -1, "default").runForeach(System.out::println, system);
     // prints:
