@@ -13,7 +13,6 @@
 
 package jdocs.typed.tutorial_4;
 
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.Map;
 import java.util.Set;
@@ -120,7 +119,7 @@ public class DeviceManager extends AbstractBehavior<DeviceManager.Command> {
     if (ref != null) {
       ref.tell(request);
     } else {
-      request.replyTo.tell(new ReplyDeviceList(request.requestId, Collections.emptySet()));
+      request.replyTo.tell(new ReplyDeviceList(request.requestId, Set.of()));
     }
     return this;
   }
