@@ -13,7 +13,6 @@
 
 package jdocs.typed.tutorial_5;
 
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.Map;
 import java.util.Set;
@@ -185,7 +184,7 @@ public class DeviceManager extends AbstractBehavior<DeviceManager.Command> {
     if (ref != null) {
       ref.tell(request);
     } else {
-      request.replyTo.tell(new ReplyDeviceList(request.requestId, Collections.emptySet()));
+      request.replyTo.tell(new ReplyDeviceList(request.requestId, Set.of()));
     }
     return this;
   }
@@ -195,7 +194,7 @@ public class DeviceManager extends AbstractBehavior<DeviceManager.Command> {
     if (ref != null) {
       ref.tell(request);
     } else {
-      request.replyTo.tell(new RespondAllTemperatures(request.requestId, Collections.emptyMap()));
+      request.replyTo.tell(new RespondAllTemperatures(request.requestId, Map.of()));
     }
     return this;
   }
