@@ -13,7 +13,6 @@
 
 package jdocs.org.apache.pekko.persistence.typed;
 
-import java.util.Collections;
 import java.util.HashSet;
 import java.util.Set;
 import org.apache.pekko.actor.typed.ActorRef;
@@ -71,7 +70,7 @@ public class MovieWatchList
 
   @Override
   public MovieList emptyState() {
-    return new MovieList(Collections.emptySet());
+    return new MovieList(Set.of());
   }
 
   @Override
